[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "enkindl"
version = "0.1.1"
description = "A tiny CLI tool that scaffolds Python projects for beginners."
readme = "README.md"
requires-python = ">3.12"
license = "MIT"
authors = [
    { name = "Caj Michael Andersson", email = "caj.michael.dev@gmail.com" }
]

[project.scripts]
enkindl = "enkindl.cli:main"